...
      </View>
    )
  }

  render() {
    return (
      <View testID="MessagesScreen" style={{ flex: 1 }}>
        <FlatList testID="FlatList"
          data={this.state.rooms}
          renderItem={(item) => this.listItem(item.item)}
          keyExtractor={(item, index) => index.toString()}
        />
      </View>
    );
...
