...
    )
  }

  render() {
    return (
      <View style={BottomScreenStyles.container}
        testID="ActiveScreen"
      >
        {this.state.friends != [] ?
          <FlatList
            data={this.state.friends}
            renderItem={(item) => this.listItem(item.item)}
            keyExtractor={(item, index) => index.toString()}
            testID="ActiveFlatList"
          />
          :
          null
        }
      </View>
    );
...
