...
                    onLogin={token => this.onLogin(token)}
                    onError={e => this.onLogin(e)}
                >
                    <Text style={styles.buttonText}>SMS</Text>
                </LoginButton>

                <TouchableOpacity testID="EmailTap" style={styles.button} onPress={() => this.onEmailLoginPressed()}>
                    <Text style={styles.buttonText}>Email</Text>
                </TouchableOpacity>
            </View>
        )
    }

...
    //         </View>
    //     )
    // }

    render() {
        return (
            <View testID="LoginView"  style={styles.container}>{this.renderLogin()}</View>
        )
    }
}

const styles = StyleSheet.create({
    container: {
...
